--- a/client/src/components/HomePage/index.css
+++ b/client/src/components/HomePage/index.css
@@ -1,9 +1,9 @@
-.table-container {
+/* .table-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     min-height: 100vh;
-}
+} */
 
 .table-button {
     margin-top: 60px;
@@ -16,25 +16,30 @@
     border-radius: 7px;
 }
 
-.top-container {
+.thead-dark {
+  background-color: black;
+  color: #ffffff;
+  font-family: "Roboto";
+}
+/* .top-container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   
 
-}
-.table-container{
+} */
+/* .table-container{
   width: 100vw;
   overflow: scroll;
-}
-table {
+} */
+/* table {
     margin-top: 25px;
     font-family: arial, sans-serif;
     border-collapse: collapse;
     width: 80%;
-  }
+  } */
   
-  td {
+  /* td {
     border: 1px solid #dddddd;
     text-align: left;
     padding: 8px;
@@ -58,7 +63,7 @@ table {
 
   tr:nth-child(odd) {
     background-color: #ffffff;
-  }
+  } */
 
   .update-button {
     background-color: #1c55e6;
@@ -78,3 +83,5 @@ table {
     border-radius: 5px;
     color: #ffffff;
   }
+
+  
